# accelerated-computing

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
benchmarks/: CMakeLists.txt  vector_ops_benchmarks.cpp
examples/: vector_add_example.cpp
include/: backend.hpp  vector_ops.hpp
src/cpu/: vector_ops_cpu.cpp
src/dispatch/: vector_ops_dispatch.cpp
src/simd/: vector_ops_simd.cpp
tests/: CMakeLists.txt  vector_ops_tests.cpp
